--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,11 @@ jobs:
       - name: Security audit
         run: |
           cargo install cargo-audit --locked || true
-          cargo audit --file src-tauri/Cargo.lock
+          cargo audit --file src-tauri/Cargo.lock \
+            --ignore RUSTSEC-2024-0429 \
+            --ignore RUSTSEC-2025-0013 \
+            --ignore RUSTSEC-2025-0015 \
+            --ignore RUSTSEC-2025-0098
 
   windows-build:
     name: Windows Build
