fix(ci): grant contents write permission for release creation
The tauri-action needs contents:write to create draft releases and
upload artifacts via the GITHUB_TOKEN.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,8 @@ jobs:
   build:
     name: Build (${{ matrix.label }})
     needs: checks
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
